unpackaged/main/default/objects/Ad_Product__c/fields/LandingpageURL__c.field-meta.xml
<CustomField>
    <fullName>LandingpageURL__c</fullName>
    <description>US-0010159 - ADS - Campaign Attribution Field Creation :
Attribution 1PD landing pages - can be multiple</description>
    <inlineHelpText>**separate the urls with a space and ;</inlineHelpText>
    <label>Landingpage URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>