unpackaged/main/default/objects/Ad_Product__c/fields/Last_Availability_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Last_Availability_Forecast__c</fullName>
    <label>Last Availability Check</label>
    <type>DateTime</type>
</CustomField>