unpackaged/main/default/objects/Ad_Product__c/fields/Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Description__c</fullName>
    <description>US-0009122 - [Ads 2020] Migrate Fields from Revenue Schedule 2 to Ad Revenue Monthly</description>
    <label>Line Description</label>
    <type>TextArea</type>
</CustomField>