unpackaged/main/default/objects/Ad_Product__c/fields/Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Number__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Line Item Number</label>
    <type>AutoNumber</type>
</CustomField>