unpackaged/main/default/objects/Ad_Product__c/fields/LineItemId__c.field-meta.xml
<CustomField>
    <fullName>LineItemId__c</fullName>
    <description>US-0009143 - [Ads 2020] Migrate Fields from Revenue 2 to Ad Product</description>
    <label>LineItemId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>