unpackaged/main/default/objects/Ad_Product__c/fields/MarkedPrimaryQuoteDate__c.field-meta.xml
<CustomField>
    <fullName>MarkedPrimaryQuoteDate__c</fullName>
    <description>US-0010628 - ADS - Allow edit rights on Revised Quote Line Items in past (with date validation)</description>
    <formula>Quote_Line_Item__r.Quote.MarkedPrimaryQuoteDate__c</formula>
    <label>MarkedPrimaryQuoteDate</label>
    <type>Date</type>
</CustomField>