unpackaged/main/default/objects/Ad_Product__c/fields/Marketing_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign_ID__c</fullName>
    <label>Marketing Campaign ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>