unpackaged/main/default/objects/Ad_Product__c/fields/Marketing_Placement_ID__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Placement_ID__c</fullName>
    <description>US-0010159 - ADS - Campaign Attribution Field Creation :
Attribution 1PD Module ID based on Module Type</description>
    <label>Marketing Placement ID</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Marketing_Placement_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100000</fullName>
            </value>
            <value>
                <fullName>100001</fullName>
            </value>
            <value>
                <fullName>100002</fullName>
            </value>
            <value>
                <fullName>100003</fullName>
            </value>
            <value>
                <fullName>100004</fullName>
            </value>
            <value>
                <fullName>100010</fullName>
            </value>
            <value>
                <fullName>100011</fullName>
            </value>
            <value>
                <fullName>100014</fullName>
            </value>
            <value>
                <fullName>100013</fullName>
            </value>
            <value>
                <fullName>100023</fullName>
            </value>
            <value>
                <fullName>100005</fullName>
            </value>
            <value>
                <fullName>100015</fullName>
            </value>
            <value>
                <fullName>100162</fullName>
            </value>
            <value>
                <fullName>100007</fullName>
            </value>
            <value>
                <fullName>100008</fullName>
            </value>
            <value>
                <fullName>100012</fullName>
            </value>
            <value>
                <fullName>100026</fullName>
            </value>
            <value>
                <fullName>100028</fullName>
            </value>
            <value>
                <fullName>100027</fullName>
            </value>
            <value>
                <fullName>100029</fullName>
            </value>
            <value>
                <fullName>100024</fullName>
            </value>
            <value>
                <fullName>100025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>