unpackaged/main/default/objects/Ad_Product__c/fields/Marketing_Placement_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Placement_Name__c</fullName>
    <description>US-0010159 - ADS - Campaign Attribution Field Creation :
Attribution 1PD Module ID based on Module Type</description>
    <label>Marketing Placement Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Marketing_Placement_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>topp home page main placement</fullName>
            </value>
            <value>
                <fullName>topp home page placement 2</fullName>
            </value>
            <value>
                <fullName>topp home page placement 3</fullName>
            </value>
            <value>
                <fullName>topp home page placement 4</fullName>
            </value>
            <value>
                <fullName>home page loyalty placement</fullName>
            </value>
            <value>
                <fullName>mWeb home page loyalty</fullName>
            </value>
            <value>
                <fullName>mWeb home page loyalty 2</fullName>
            </value>
            <value>
                <fullName>mNative AnDroid home page loyalty</fullName>
            </value>
            <value>
                <fullName>mNative iOS home page loyalty</fullName>
            </value>
            <value>
                <fullName>mNative iOS home page loyalty 2</fullName>
            </value>
            <value>
                <fullName>home page full bleed</fullName>
            </value>
            <value>
                <fullName>home page full bleed 2</fullName>
            </value>
            <value>
                <fullName>Home Page Full Bleed 3</fullName>
            </value>
            <value>
                <fullName>mWeb home page Full bleed 1</fullName>
            </value>
            <value>
                <fullName>mWeb home page Full bleed 2</fullName>
            </value>
            <value>
                <fullName>mWeb home page Full bleed 4</fullName>
            </value>
            <value>
                <fullName>mNative Android home page multicta</fullName>
            </value>
            <value>
                <fullName>mNative Android home page multicta 2</fullName>
            </value>
            <value>
                <fullName>mNative iOS home page multicta</fullName>
            </value>
            <value>
                <fullName>mNative iOS home page multicta 2</fullName>
            </value>
            <value>
                <fullName>mNative Android home page fullbleed</fullName>
            </value>
            <value>
                <fullName>mNative iOS home page fullbleed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>