unpackaged/main/default/objects/Ad_Product__c/fields/Marketing_Placement_Type__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Placement_Type__c</fullName>
    <description>US-0010159 - ADS - Campaign Attribution Field Creation :
Attribution 1PD Marketing Placement Type</description>
    <label>Marketing Placement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing - TOPP</fullName>
            </value>
            <value>
                <fullName>Marketing - Loyalty Banner</fullName>
            </value>
            <value>
                <fullName>Loyalty - App</fullName>
            </value>
            <value>
                <fullName>Marketing - PMB/MCTA PMB</fullName>
            </value>
            <value>
                <fullName>PMB Multi CTA - App</fullName>
            </value>
            <value>
                <fullName>PMB Single CTA – App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>