unpackaged/main/default/objects/Ad_Product__c/fields/Marketing_Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Platform_Type__c</fullName>
    <label>Marketing Platform Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Madrona</fullName>
            </value>
            <value>
                <fullName>UEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>