unpackaged/main/default/objects/Ad_Product__c/fields/MaxDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>MaxDiscountAmount__c</fullName>
    <label>Max Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>