unpackaged/main/default/objects/Ad_Product__c/fields/May__c.field-meta.xml
<CustomField>
    <fullName>May__c</fullName>
    <label>May</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>