unpackaged/main/default/objects/Ad_Product__c/fields/Module_ID__c.field-meta.xml
<CustomField>
    <fullName>Module_ID__c</fullName>
    <description>US-0010159 - ADS - Campaign Attribution Field Creation :
Attribution 1PD Module ID based on Module Type</description>
    <label>Sub Module ID (Deals)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Module_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3940</fullName>
            </value>
            <value>
                <fullName>2735</fullName>
            </value>
            <value>
                <fullName>3252</fullName>
            </value>
            <value>
                <fullName>3839</fullName>
            </value>
            <value>
                <fullName>5259</fullName>
            </value>
            <value>
                <fullName>3266</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>