unpackaged/main/default/objects/Ad_Product__c/fields/Module_Type__c.field-meta.xml
<CustomField>
    <fullName>Module_Type__c</fullName>
    <description>US-0010159 - ADS - Campaign Attribution Field Creation :
Attribution 1PD Module Type for Deals Page Placement</description>
    <label>Module Type (Deals)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primaries</fullName>
            </value>
            <value>
                <fullName>MFD DBC</fullName>
            </value>
            <value>
                <fullName>Themed DBCs</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Event Module</fullName>
            </value>
            <value>
                <fullName>Sponsored Deals</fullName>
            </value>
            <value>
                <fullName>Trending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>