unpackaged/main/default/objects/Ad_Product__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Month &amp; Year ||</description>
    <formula>CASE(MONTH(from_Date__c),1,&quot;Jan&quot;, 
2,&quot;Feb&quot;, 
3,&quot;Mar&quot;, 
4,&quot;Apr&quot;, 
5,&quot;May&quot;, 
6,&quot;Jun&quot;, 
7,&quot;Jul&quot;, 
8,&quot;Aug&quot;, 
9,&quot;Sep&quot;, 
10,&quot;Oct&quot;, 
11,&quot;Nov&quot;, 
12,&quot;Dec&quot;,&quot;&quot;) &amp; &quot;/&quot; &amp; Text(YEAR(from_Date__c))</formula>
    <label>Month&amp;Year</label>
    <type>Text</type>
</CustomField>