unpackaged/main/default/objects/Ad_Product__c/fields/Net_Net_Net__c.field-meta.xml
<CustomField>
    <fullName>Net_Net_Net__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <label>Net/Net/Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>