unpackaged/main/default/objects/Ad_Product__c/fields/OLI_Number__c.field-meta.xml
<CustomField>
    <fullName>OLI_Number__c</fullName>
    <displayFormat>IOL-{0}</displayFormat>
    <label>OLI Number</label>
    <type>AutoNumber</type>
</CustomField>