unpackaged/main/default/objects/Ad_Product__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>US-0009143 - [Ads 2020] Migrate Fields from Revenue 2 to Ad Product</description>
    <externalId>true</externalId>
    <label>Order ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>