unpackaged/main/default/objects/Ad_Product__c/fields/OSI__c.field-meta.xml
<CustomField>
    <fullName>OSI__c</fullName>
    <description>US-0007908 [Ads 2020] Migrate DFP Batch Process to Hive</description>
    <label>OSI</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>