unpackaged/main/default/objects/Ad_Product__c/fields/Package_line_item__c.field-meta.xml
<CustomField>
    <fullName>Package_line_item__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals
US-0009143 - [Ads 2020] Migrate Fields from Revenue 2 to Ad Product</description>
    <label>Package line item</label>
    <length>18</length>
    <type>Text</type>
</CustomField>