unpackaged/main/default/objects/Ad_Product__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>US-0010166 - Relaunching Ads revenue fields</description>
    <formula>IF(CONTAINS($Profile.Name , &quot;Ads User Profile&quot;) ,
text(month(from_Date__c)) &amp; &quot;/&quot; &amp; text(day(from_Date__c)) &amp;&quot;/&quot; &amp; text(year(from_Date__c)) &amp; &quot; - &quot; &amp; text(month(until_Date__c)) &amp; &quot;/&quot; &amp; text(day(until_Date__c)) &amp; &quot;/&quot; &amp; text(year(until_Date__c)),


IF(CONTAINS($Profile.Name , &quot;Ads EU User Profile&quot;) ,
text(day(from_Date__c)) &amp; &quot;.&quot; &amp; text(month(from_Date__c)) &amp; &quot;.&quot; &amp; text(year(from_Date__c)) &amp; &quot; - &quot; &amp; text(day(until_Date__c)) &amp; &quot;.&quot; &amp; text(month(until_Date__c)) &amp; &quot;.&quot; &amp; text(year(until_Date__c)),
text(month(from_Date__c)) &amp; &quot;/&quot; &amp; text(day(from_Date__c)) &amp;&quot;/&quot; &amp; text(year(from_Date__c)) &amp; &quot; - &quot; &amp; text(month(until_Date__c)) &amp; &quot;/&quot; &amp; text(day(until_Date__c)) &amp; &quot;/&quot; &amp; text(year(until_Date__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period</label>
    <type>Text</type>
</CustomField>