unpackaged/main/default/objects/Ad_Product__c/fields/Placement_Name__c.field-meta.xml
<CustomField>
    <fullName>Placement_Name__c</fullName>
    <description>INTEG - N || ** eBay Advertising **  || WF - N || AP - N || VAL - N ||Class - N || Definition: Placement Name ||</description>
    <label>Placement Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>