unpackaged/main/default/objects/Ad_Product__c/fields/Predefined_Adunit__c.field-meta.xml
<CustomField>
    <fullName>Predefined_Adunit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Predefined Adunit</label>
    <referenceTo>Content__c</referenceTo>
    <relationshipLabel>Ad Product Content</relationshipLabel>
    <relationshipName>Ad_Product_Content</relationshipName>
    <type>Lookup</type>
</CustomField>