unpackaged/main/default/objects/Ad_Product__c/fields/Predefined_Placement__c.field-meta.xml
<CustomField>
    <fullName>Predefined_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Predefined Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Ad Product Placement</relationshipLabel>
    <relationshipName>Ad_Product_Placement</relationshipName>
    <type>Lookup</type>
</CustomField>