unpackaged/main/default/objects/Ad_Product__c/fields/Price_incl_Targeting__c.field-meta.xml
<CustomField>
    <fullName>Price_incl_Targeting__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <label>Price incl. Targeting</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>