unpackaged/main/default/objects/Ad_Product__c/fields/Prior_TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>Prior_TotalPrice__c</fullName>
    <description>US-0010628 - ADS - Allow edit rights on Revised Quote Line Items in past (with date validation)</description>
    <label>Prior TotalPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>