unpackaged/main/default/objects/Ad_Product__c/fields/Prior_Until_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Until_Date__c</fullName>
    <description>US-0010628 - ADS - Allow edit rights on Revised Quote Line Items in past (with date validation)</description>
    <label>Prior_Until_Date__c</label>
    <type>Date</type>
</CustomField>