unpackaged/main/default/objects/Ad_Product__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>US-0009350 - [Ads 2020] EU Floor Price/Ad Type/Priority Requirements</description>
    <label>Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>