unpackaged/main/default/objects/Ad_Product__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product2</relationshipLabel>
    <relationshipName>Product2</relationshipName>
    <type>Lookup</type>
</CustomField>