unpackaged/main/default/objects/Ad_Product__c/fields/Product_Enddate__c.field-meta.xml
<CustomField>
    <fullName>Product_Enddate__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <label>Product-Enddate</label>
    <type>Date</type>
</CustomField>