unpackaged/main/default/objects/Ad_Product__c/fields/Product_Package__c.field-meta.xml
<CustomField>
    <fullName>Product_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Packaged Product</label>
    <referenceTo>Product_Package__c</referenceTo>
    <relationshipLabel>Ad Products</relationshipLabel>
    <relationshipName>Ad_Products</relationshipName>
    <type>Lookup</type>
</CustomField>