unpackaged/main/default/objects/Ad_Product__c/fields/Product_Placement__c.field-meta.xml
<CustomField>
    <fullName>Product_Placement__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Product Placement ||</description>
    <formula>Product2__r.Placement__c</formula>
    <label>Product Placement</label>
    <type>Text</type>
</CustomField>