unpackaged/main/default/objects/Ad_Product__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <formula>Product2__r.Name</formula>
    <label>ProductName</label>
    <type>Text</type>
</CustomField>