unpackaged/main/default/objects/Ad_Product__c/fields/Proposal_Lineitem_Id__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Lineitem_Id__c</fullName>
    <description>US-0009927 - Update PG Opportunity Flow</description>
    <externalId>true</externalId>
    <label>Proposal Lineitem Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>