unpackaged/main/default/objects/Ad_Product__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Ad Products</relationshipLabel>
    <relationshipName>Ad_Products</relationshipName>
    <type>Lookup</type>
</CustomField>