unpackaged/main/default/objects/Ad_Product__c/fields/Rebate_In_Kind__c.field-meta.xml
<CustomField>
    <fullName>Rebate_In_Kind__c</fullName>
    <description>US-0009143 - [Ads 2020] Migrate Fields from Revenue 2 to Ad Product</description>
    <label>Rebate In Kind</label>
    <length>50</length>
    <type>Text</type>
</CustomField>