unpackaged/main/default/objects/Ad_Product__c/fields/Runtime_Days__c.field-meta.xml
<CustomField>
    <fullName>Runtime_Days__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <label>Runtime (Days)</label>
    <summaryForeignKey>Ad_Revenue_Daily__c.Ad_Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>