unpackaged/main/default/objects/Ad_Product__c/fields/Runtime_Days_R__c.field-meta.xml
<CustomField>
    <fullName>Runtime_Days_R__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals,
US-0009328 - Update Hive Advertising to Add Fields for Invoice Amount Clarification</description>
    <formula>/*Product_Enddate__c - Product_Startdate__c   +1 //US-0009328 */
until_Date__c - from_Date__c  + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Runtime (Days) (R)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>