unpackaged/main/default/objects/Ad_Product__c/fields/Runtime_Months__c.field-meta.xml
<CustomField>
    <fullName>Runtime_Months__c</fullName>
    <description>US-0009143 - [Ads 2020] Migrate Fields from Revenue 2 to Ad Product</description>
    <label>Runtime (Months)</label>
    <summaryForeignKey>Ad_Revenue_Monthly__c.Ad_Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>