unpackaged/main/default/objects/Ad_Product__c/fields/Sales_Price_incl_Targeting__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_incl_Targeting__c</fullName>
    <description>US-0009260 - [Ads 2020] OLI Trigger to QLI/AP, Fields &amp; Syncing</description>
    <inlineHelpText>Sales Price plus any targeting or surcharge</inlineHelpText>
    <label>Sales Price Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>