unpackaged/main/default/objects/Ad_Product__c/fields/Screenshot__c.field-meta.xml
<CustomField>
    <fullName>Screenshot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-9358</description>
    <label>Screenshot</label>
    <type>Checkbox</type>
</CustomField>