unpackaged/main/default/objects/Ad_Product__c/fields/Seller_ID_1PD__c.field-meta.xml
<CustomField>
    <fullName>Seller_ID_1PD__c</fullName>
    <description>US-0010159 - ADS - Campaign Attribution Field Creation :
Attribution 1PD related seller ID</description>
    <label>Seller ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>