unpackaged/main/default/objects/Ad_Product__c/fields/September__c.field-meta.xml
<CustomField>
    <fullName>September__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: September || CR - 00521865</description>
    <label>September</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>