unpackaged/main/default/objects/Ad_Product__c/fields/Special_Agency_Discount__c.field-meta.xml
<CustomField>
    <fullName>Special_Agency_Discount__c</fullName>
    <description>US-0007934 - [Ads 2020] Daily Ads Revenue - Required EU Fields for Accruals</description>
    <label>Special Agency Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>