unpackaged/main/default/objects/Ad_Product__c/fields/SUM_AI_Daily__c.field-meta.xml
<CustomField>
    <fullName>SUM_AI_Daily__c</fullName>
    <description>US-0009161 - [Ads 2020] Migrate Formulas from Revenue 2 to Ad Product</description>
    <label>SUM AI Daily</label>
    <summarizedField>Ad_Revenue_Daily__c.Delivered_AI__c</summarizedField>
    <summaryForeignKey>Ad_Revenue_Daily__c.Ad_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>