unpackaged/main/default/objects/Ad_Product__c/fields/Takeover__c.field-meta.xml
<CustomField>
    <fullName>Takeover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Takeover</label>
    <type>Checkbox</type>
</CustomField>