unpackaged/main/default/objects/Ad_Product__c/fields/Targeting__c.field-meta.xml
<CustomField>
    <fullName>Targeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Targeting</label>
    <referenceTo>Targeting__c</referenceTo>
    <relationshipLabel>Ad Product Product</relationshipLabel>
    <relationshipName>Ad_Product_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>