unpackaged/main/default/objects/Ad_Product__c/fields/Targeting_fee__c.field-meta.xml
<CustomField>
    <fullName>Targeting_fee__c</fullName>
    <description>US-0009226 - [Ads 2020] Account Turnover</description>
    <label>Targeting fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>