unpackaged/main/default/objects/Ad_Product__c/fields/Targeting_Template__c.field-meta.xml
<CustomField>
    <fullName>Targeting_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Targeting Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Targeting__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Targeting__c</referenceTo>
    <relationshipLabel>Ad Product Targeting</relationshipLabel>
    <relationshipName>Ad_Product_Targeting</relationshipName>
    <type>Lookup</type>
</CustomField>