unpackaged/main/default/objects/Ad_Product__c/fields/Total_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount__c</fullName>
    <description>US-0009328 - Update Hive Advertising to Add Fields for Invoice Amount Clarification</description>
    <label>Total Invoice Amount</label>
    <summarizedField>Ad_Revenue_Monthly__c.Invoice_amount2__c</summarizedField>
    <summaryForeignKey>Ad_Revenue_Monthly__c.Ad_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>